--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -1,17 +1,20 @@
 .main {
   width: 100%;
   flex-grow: 1;
-  background: url('/src/assets/113126.jpg') no-repeat;
+  background: url('/src/assets/commonBack.jpg') no-repeat;
   background-size: cover;
   display: flex;
 }
 
 .logo {
   width: 400px;
+  height: 400px;
   position: absolute;
   right: calc(50% - 200px);
   z-index: 2;
   cursor: pointer;
+  background: url('/src/assets/logo.png') center center no-repeat;
+  background-size: contain;
 }
 
 .main-button {
@@ -37,6 +40,11 @@
     right: 0;
     top: 150px;
   }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .background {
@@ -50,12 +58,12 @@
   z-index: 1;
 
   &--works {
-    background: url('/src/assets/113138.jpg') no-repeat;
+    background: url('/src/assets/worksBack.jpg') no-repeat;
     background-size: cover;
   }
 
   &--about {
-    background: url('/src/assets/113142.jpg') no-repeat;
+    background: url('/src/assets/aboutBack.jpg') no-repeat;
     background-size: cover;
   }
 
