--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -1,7 +1,7 @@
 .main {
   width: 100%;
   flex-grow: 1;
-  background: url('/src/assets/commonBack.jpg') no-repeat;
+  background: white;
   background-size: cover;
   display: flex;
 }
@@ -64,6 +64,11 @@
 
   &--about {
     background: url('/src/assets/aboutBack.jpg') no-repeat;
+    background-size: cover;
+  }
+
+  &--main {
+    background: url('/src/assets/commonBack.jpg') no-repeat;
     background-size: cover;
   }
 
