--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -1,9 +1,11 @@
 .main {
   width: 100%;
   flex-grow: 1;
-  background: url('/src/assets/commonBack.jpg') no-repeat;
+  background: white;
   background-size: cover;
   display: flex;
+  position: relative;
+  z-index: 0;
 }
 
 .logo {
@@ -17,10 +19,40 @@
   background-size: contain;
 }
 
+.abralogo {
+  background: url('/src/assets/abralogo.svg') no-repeat;
+  width: 200px;
+  height: 400px;
+  position: relative;
+  z-index: 1;
+
+  &-back {
+    position: absolute;
+    left: calc(50% - 100px);
+    top: 120px;
+    z-index: 1;
+     &:after {
+       content: '';
+       width: 0;
+       height: 0;
+       transform: scale(1.6, 3) translateY(30%);
+       border: 100px solid transparent;
+       border-top-color: #1e1e1e;
+       position: absolute;
+       top: 0;
+       z-index: 0;
+     }
+  }
+}
+
 .main-button {
-  color: white;
+  color: #6D6D6D;
   background-color: #2e2e2e;
   display: flex;
+  min-width: 250px;
+  height: 80px;
+  box-sizing: border-box;
+  justify-content: center;
   align-items: center;
   padding: 20px;
   border: 0;
@@ -31,19 +63,141 @@
 
   &--about {
     position: absolute;
-    left: 0;
+    left: calc(50% - 350px);
     top: 150px;
+
+    &:before {
+      content: '';
+      width: 0;
+      height: 0;
+      position: absolute;
+      left: 0;
+      bottom: -20px;
+      border: 10px solid transparent;
+      border-top-color: black;
+      border-right-color: black;
+      z-index: 2;
+    }
+
+    &:after {
+      content: '';
+      width: 100px;
+      height: 40px;
+      background-color: #0e0e0e;
+      position: absolute;
+      right: 0;
+      bottom: -50%;
+      transform: skewX(-45deg) translateX(-20px);
+      z-index: -2;
+    }
   }
 
   &--works {
     position: absolute;
-    right: 0;
+    right: calc(50% - 350px);
     top: 150px;
+
+    &:before {
+      content: '';
+      width: 0;
+      height: 0;
+      position: absolute;
+      right: 0;
+      bottom: -20px;
+      border: 10px solid transparent;
+      border-top-color: black;
+      border-left-color: black;
+      z-index: 2;
+    }
+
+    &:after {
+      content: '';
+      width: 100px;
+      height: 40px;
+      background-color: #0e0e0e;
+      position: absolute;
+      left: 0;
+      bottom: -50%;
+      transform: skewX(45deg) translateX(20px);
+      z-index: -2;
+    }
+  }
+
+  &--main {
+    width: 480px;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    right: calc(50% - 240px);
+    top: 270px;
+    z-index: 0;
+    background: url('/src/assets/satanback.svg') #2e2e2e no-repeat center;
+    background-size: 90%;
   }
 
   a {
     color: inherit;
     text-decoration: none;
+    position: relative;
+    z-index: 2;
+  }
+}
+
+.ribbon {
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
+
+  &:after {
+    content: '';
+    width: 0;
+    height: 0;
+    border: 40px solid transparent;
+    border-bottom-color: #1e1e1e;
+    border-right-color: #1e1e1e;
+    position: absolute;
+    left: -60px;
+    bottom: -20px;
+  }
+
+  &:before {
+    content: '';
+    width: 0;
+    height: 0;
+    border: 40px solid transparent;
+    border-top-color: #1e1e1e;
+    border-right-color: #1e1e1e;
+    position: absolute;
+    left: -60px;
+    bottom: -20px;
+  }
+
+  &-coverup {
+    background-color: #2e2e2e;
+    width: 50px;
+    height: 80px;
+    position: absolute;
+    top: 0;
+
+    &-left {
+      left: 0;
+    }
+
+    &-right {
+      right: 0;
+    }
+  }
+
+  &-left {
+    left: 0;
+  }
+
+  &-right {
+    right: 0;
+    bottom: 40px;
+    transform: scale(-1);
   }
 }
 
@@ -55,7 +209,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: -1;
 
   &--works {
     background: url('/src/assets/worksBack.jpg') no-repeat;
@@ -67,7 +221,26 @@
     background-size: cover;
   }
 
+  &--main {
+    background: url('/src/assets/commonBack.jpg') no-repeat;
+    background-size: cover;
+  }
+
   &.active {
     opacity: 1;
+  }
+}
+
+.social {
+  width: 50px;
+  height: 50px;
+  opacity: .5;
+
+  &-vk {
+    background: url('/src/assets/vk.svg') no-repeat;
+  }
+
+  &-inst {
+    background: url('/src/assets/inst.svg') no-repeat;
   }
 }
