--- a/src/pages/app.scss
+++ b/src/pages/app.scss
@@ -41,12 +41,12 @@
 }
 
 .main-container {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: black;
-  overflow: hidden;
 }
 
 .fade-enter-active, .fade-leave-active {
