--- a/src/pages/inner-pages.scss
+++ b/src/pages/inner-pages.scss
@@ -18,7 +18,7 @@
   padding: 10vh 2vw;
   box-sizing: border-box;
   flex-basis: 25vw;
-  flex-shrink: 1;
+  flex-shrink: 0;
   background-color: rgba(0, 0, 0, .5);
 }
 
@@ -34,4 +34,5 @@
 .content {
   flex-grow: 1;
   background-color: #000;
+  margin-top: 10vh;
 }
