Gallery finished. Start implementing about pages

--- a/src/pages/app.scss
+++ b/src/pages/app.scss
@@ -47,6 +47,7 @@
   flex-direction: column;
   justify-content: space-between;
   background-color: black;
+  overflow: hidden;
 }
 
 .fade-enter-active, .fade-leave-active {
