--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=El+Messiri:600');
+@import 'variables';
 
 .main {
   width: 100%;
@@ -49,8 +50,8 @@
 }
 
 .main-button {
-  color: #6D6D6D;
-  background-color: #2e2e2e;
+  color: lighten($darkgray, 20%);
+  background-color: $darkgray;
   display: flex;
   min-width: 250px;
   height: 80px;
@@ -87,7 +88,7 @@
       content: '';
       width: 100px;
       height: 40px;
-      background-color: #0e0e0e;
+      background-color: darken($darkgray, 20%);
       position: absolute;
       right: 0;
       bottom: -50%;
@@ -118,7 +119,7 @@
       content: '';
       width: 100px;
       height: 40px;
-      background-color: #0e0e0e;
+      background-color: darken($darkgray, 20%);
       position: absolute;
       left: 0;
       bottom: -50%;
@@ -137,7 +138,7 @@
     right: calc(50% - 240px);
     top: 270px;
     z-index: 0;
-    background: url('/src/assets/satanback.svg') #2e2e2e no-repeat center;
+    background: url('/src/assets/satanback.svg') $darkgray no-repeat center;
     background-size: 90%;
   }
 
@@ -146,7 +147,7 @@
     text-decoration: none;
     position: relative;
     z-index: 2;
-    font-family: 'El Messiri', sans-serif;
+    font-family: $custom-font;
   }
 
   &:hover {
@@ -164,8 +165,8 @@
     width: 0;
     height: 0;
     border: 40px solid transparent;
-    border-bottom-color: #1e1e1e;
-    border-right-color: #1e1e1e;
+    border-bottom-color: darken($darkgray, 5%);
+    border-right-color: darken($darkgray, 5%);
     position: absolute;
     left: -60px;
     bottom: -20px;
@@ -176,15 +177,15 @@
     width: 0;
     height: 0;
     border: 40px solid transparent;
-    border-top-color: #1e1e1e;
-    border-right-color: #1e1e1e;
+    border-top-color: darken($darkgray, 5%);
+    border-right-color: darken($darkgray, 5%);
     position: absolute;
     left: -60px;
     bottom: -20px;
   }
 
   &-coverup {
-    background-color: #2e2e2e;
+    background-color: $darkgray;
     width: 50px;
     height: 80px;
     position: absolute;
@@ -236,11 +237,11 @@
   width: 50px;
   height: 50px;
   opacity: .5;
-  color: #0e0e0e;
+  color: darken($darkgray, 20%);
   transition: all .3s;
 
   &:hover {
-    color: #6D6D6D;
+    color: lighten($darkgray, 20%);
   }
 }
 
