--- a/src/css/inner-pages.scss
+++ b/src/css/inner-pages.scss
@@ -76,6 +76,16 @@
     margin-left: 25vw;
   }
 
+  &--fullscreen {
+    max-width: 100vw;
+    margin-right: 0;
+  }
+
+  .gmap {
+    width: 100%;
+    height: 100%;
+  }
+
   .works-back {
     margin: 50px;
     display: flex;
