--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=El+Messiri:600');
 @import 'variables';
 
+h1, h2 {
+  font-family: $custom-font;
+  color: white;
+  padding-left: 20px;
+  border-left: 5px solid $darkred;
+}
+
+h2 {
+  background-color: $darkred;
+  margin-top: 0;
+}
+
+p {
+  font-family: $custom-font;
+  color: white;
+  padding: 0 20px;
+  line-height: normal;
+}
+
+a {
+  font-family: $custom-font;
+  color: white;
+
+  &:hover {
+    color: $darkred;
+  }
+}
+
 .main {
   width: 100%;
   flex-grow: 1;
